--- a/UserMS/pom.xml
+++ b/UserMS/pom.xml
@@ -56,6 +56,14 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
