Enhance deployment with StatefulSets and Headless Services: - Convert MongoDB and RabbitMQ to StatefulSets - Add persistent storage - Add headless services - Update NotificationService to use MongoDB - Add resource limits and health probes

--- a/k8s/mongodb/deployment.yaml
+++ b/k8s/mongodb/deployment.yaml
@@ -9,11 +9,26 @@ spec:
     requests:
       storage: 1Gi
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-headless
+  labels:
+    app: mongodb
+spec:
+  clusterIP: None
+  selector:
+    app: mongodb
+  ports:
+    - port: 27017
+      targetPort: 27017
+---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mongodb
 spec:
+  serviceName: mongodb-headless
   replicas: 1
   selector:
     matchLabels:
@@ -40,12 +55,23 @@ spec:
                   name: mongodb-secret
                   key: password
           volumeMounts:
-            - name: mongodb-storage
+            - name: mongodb-data
               mountPath: /data/db
-      volumes:
-        - name: mongodb-storage
-          persistentVolumeClaim:
-            claimName: mongodb-pvc
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
+  volumeClaimTemplates:
+    - metadata:
+        name: mongodb-data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
