--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 
 services:
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -10,6 +21,8 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
 
   notificationservice:
     build:
@@ -20,9 +33,14 @@ services:
       - "8083:8083"
     environment:
       SERVER_PORT: 8083
+      SPRING_DATA_MONGODB_URI: mongodb://root:example@mongodb:27017/notifications?authSource=admin
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
     depends_on:
+      - mongodb
       - rabbitmq
 
 volumes:
-  postgres_data:
-  mongodb_data: 
+  mongodb_data:
+  rabbitmq_data: 
