--- a/k8s/notificationservice/deployment.yaml
+++ b/k8s/notificationservice/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: notificationservice
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: notificationservice
@@ -23,8 +23,36 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "kubernetes"
+            - name: SPRING_DATA_MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: uri
             - name: SPRING_RABBITMQ_HOST
-              value: "rabbitmq"
+              value: "rabbitmq-headless"
+            - name: SPRING_RABBITMQ_USERNAME
+              value: "guest"
+            - name: SPRING_RABBITMQ_PASSWORD
+              value: "guest"
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8083
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8083
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
