--- a/NotificationService/src/main/resources/application.properties
+++ b/NotificationService/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.application.name=userms
+spring.application.name=notification-service
 
 # Redis Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.type=redis
-spring.cache.redis.time-to-live=1800000
+spring.cache.redis.time-to-live=900000
 spring.cache.redis.cache-null-values=false
 
-# Server port
-server.port=8081
+server.port=8082 
