--- a/NotificationService/src/main/resources/application.yml
+++ b/NotificationService/src/main/resources/application.yml
@@ -4,6 +4,15 @@ spring:
     port: 5672
     username: guest
     password: guest
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  cache:
+    type: redis
+    redis:
+      time-to-live: 900000 # 15 minutes
+      cache-null-values: false
 
 server:
   port: 8083
