--- a/UserMS/src/main/resources/application.properties
+++ b/UserMS/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=UserMS
+spring.application.name=userms
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1800000
+spring.cache.redis.cache-null-values=false
+
+# Server port
+server.port=8081
