--- a/courseservice/src/main/resources/application.properties
+++ b/courseservice/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=courseservice
 
-
 spring.data.mongodb.database=course_service
 spring.data.mongodb.auto-index-creation=true
-
 spring.data.mongodb.uri=mongodb://mongo:27017/course_service
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1800000
+spring.cache.redis.cache-null-values=false
+
 user.service.url=http://localhost:8081
 server.port=8080
