--- a/courseservice/src/main/resources/application.properties
+++ b/courseservice/src/main/resources/application.properties
@@ -13,3 +13,26 @@ spring.cache.redis.cache-null-values=false
 
 user.service.url=http://localhost:8081
 server.port=8080
+
+# Logging 
+logging.level.root=INFO
+logging.level.com.example.courseservice=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] [${spring.application.name},%X{traceId},%X{spanId}] %-5level %logger{36} - %msg%n
+logging.file.name=logs/courseservice.log
+logging.file.max-size=10MB
+logging.file.max-history=10
+
+# Actuator 
+management.endpoints.web.exposure.include=health,metrics,prometheus,info,loggers
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
+# Prometheus 
+management.metrics.export.prometheus.enabled=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+# Tracing 
+spring.sleuth.sampler.probability=1.0
+spring.sleuth.web.skipPattern=(^cleanup.*|.+favicon.*)
