--- a/NotificationService/src/main/resources/application.yml
+++ b/NotificationService/src/main/resources/application.yml
@@ -13,6 +13,53 @@ spring:
     redis:
       time-to-live: 900000 # 15 minutes
       cache-null-values: false
+  application:
+    name: notificationservice
 
 server:
   port: 8083
+
+# Logging 
+logging:
+  level:
+    root: INFO
+    com.example.piazza.notificationservice: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] [${spring.application.name},%X{traceId},%X{spanId}] %-5level %logger{36} - %msg%n"
+  file:
+    name: logs/notification-service.log
+    max-size: 10MB
+    max-history: 10
+
+# Actuator 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,prometheus,info,loggers
+  endpoint:
+    health:
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+
+# Tracing 
+spring:
+  sleuth:
+    sampler:
+      probability: 1.0
+    web:
+      skipPattern: (^cleanup.*|.+favicon.*)
