--- a/courseservice/docker-compose.yml
+++ b/courseservice/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3.8'
 
 services:
+    
   course-service:
     build: .
     ports:
-      - "8080:8080"
+      - "8081:8081"
+      
     depends_on:
       - mongo
     environment:
       - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/course_service
+      - USER_SERVICE_URL=http://userms:8080
+      - SERVER_PORT=8081  
     networks:
-      - course-network
+        - shared-network
 
   mongo:
     image: mongo:latest
@@ -19,22 +23,11 @@ services:
     volumes:
       - mongo-data:/data/db
     networks:
-      - course-network
+      - shared-network
 
-user:
-  service:
-    url: http://localhost:8081 
-
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000
-        readTimeout: 5000
-        loggerLevel: basic
 volumes:
   mongo-data:
 
 networks:
-  course-network:
+  shared-network: 
     driver: bridge
