--- a/courseservice/src/main/resources/application.properties
+++ b/courseservice/src/main/resources/application.properties
@@ -5,5 +5,12 @@ spring.data.mongodb.database=course_service
 spring.data.mongodb.auto-index-creation=true
 
 spring.data.mongodb.uri=mongodb://mongo:27017/course_service
-user.service.url=http://localhost:8081
-server.port=8080
+user.service.url=http://localhost:8080
+server.port=8081
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
