--- a/UserMS/src/main/resources/application.properties
+++ b/UserMS/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=UserMS
 spring.profiles.active=local
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
