--- a/k8s/postgres/deployment.yaml
+++ b/k8s/postgres/deployment.yaml
@@ -30,17 +30,11 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_DB
-              value: "courses"
+              value: "user_database"
             - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
+              value: "user_username"
             - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
+              value: "user_password"
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
